samples/fr-platform/templates/ig.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ig
  namespace: sample
  labels:
    role: proxy
spec:
  containers:
    - image: forgerock-docker-public.bintray.io/forgerock/sample-fr-platform/ig:6.0.0
      imagePullPolicy: IfNotPresent
      name: ig
      ports:
        - containerPort: 8080
          name: http
          protocol: TCP
      resources:
          requests:
            memory: "512Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: ig-service
  namespace: sample
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    role: proxy
